syntax = "proto3";

package proto;

option go_package = "./proto";

import "google/api/annotations.proto";

service MoviesApi {
    rpc GetAllMovies(pageSearchRequest) returns (pageSearchResponse) {
        option (google.api.http) = {
            post: "/movies"
            body: "*"
        };
    }
    rpc GetMoviesById(idRequest) returns (pageSearchResponse) {
            option (google.api.http) = {
            post: "/movies/id"
            body: "*"
        };
    }
}

message Movies {
	string Title  =1;
	string Year   =2;
	string Poster =3;
	string ImdbID =4;
	string Type   =5;
}

message Info {
	Movies movies       =1;
	string TotalResults =2;
	string Response     =3;
}

message idRequest {
    string id = 1;
}

message pageSearchRequest {
    string page     = 1;
    string search   = 2;
}

message idResponse {
    Movies movies = 1;
}

message pageSearchResponse {
    Movies movies = 1;
}